k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flask-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: flask
  ingress:
    - ports:
        - port: 5000
